# File_Exchange

./: CMakeLists.txt  Makefile  README.md  command_handler.c  command_handler.h  context.h  events.c  events.h  file_triplet.c  file_triplet.h  list.c  list.h  main.c  read_file.c  read_file.h  shell_mode.c  shell_mode.h  tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h  udp_search.c  udp_search.h  udp_server.c  udp_server.h  ui_module.c  ui_module.h  util.h
event/: events.c  events.h
network/: tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h  udp_search.c  udp_search.h  udp_server.c  udp_server.h
ui/: ui_module.c  ui_module.h
utils/: command_handler.c  context.h  util.c
utils/dir_reader/: read_file.c  read_file.h
utils/list/: list.c  list.h
